<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/signInName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signInUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/signInConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword" />

        <Space
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/signInDepartmentLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/departmentLabel" />

        <Spinner
            android:id="@+id/departmentMenu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

        <Space
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <CheckBox
            android:id="@+id/checkbox_meat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/adminOption" />

        <EditText
            android:id="@+id/signInAdminPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterAdminPass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="signIn"
            android:text="@string/createAccount"
            android:textColor="#FCFBFB" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>