<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleMeetingActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scheduleLinearLayout"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scheduleLabel">

            <TextView
                android:id="@+id/scheduleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/scheduleLabelString"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/chooseDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/chooseDescriptionString"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@id/scheduleLabel" />

            <EditText
                android:id="@+id/chooseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enterDescriptionText"
                android:inputType="textAutoCorrect"
                android:autofillHints="description" />

            <TextView
                android:id="@+id/chooseAudienceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/chooseAudienceString"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@id/chooseDescription" />

            <Spinner
                android:id="@+id/chooseAudienceMenu"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/chooseDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/chooseDateString"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@id/chooseAudienceMenu" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dateChosenLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/defaultTextBox"
                android:textColor="#2D2F31"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/changeTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:onClick="changeTime"
                android:text="@string/changeTimeString"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/horizontalLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/chooseRemoteLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseRemoteString"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp" />

                <CheckBox
                    android:id="@+id/verifyWithLocCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="onRemoteCheckboxClicked" />
            </LinearLayout>


            <TextView
                android:id="@+id/chooseLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/chooseLocationString"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@id/horizontalLayout" />

            <RadioGroup
                android:id="@+id/locationRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/currentLocationRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/useDeviceLocation" />

                <RadioButton
                    android:id="@+id/customLocationRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/customLocationLabel" />
            </RadioGroup>

                <Button
                    android:id="@+id/deleteMeetingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/regular_button_selector"
                    android:onClick="deleteMeeting"
                    android:text="@string/removeMeeting"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:shadowColor="#A8A8A8"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="5"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/unimportant_button_selector"
                android:onClick="submitMeeting"
                android:text="@string/submitMessage"
                android:textSize="24sp"
                android:textColor="@color/lovelyWhite"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"/>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>