<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMarginsActivity">


    <LinearLayout
        android:id="@+id/marginsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editMarginsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:text="@string/changeMarginsMessage"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/editLocationMarginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/locationMarginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_location_margin_message"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/metersViewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/chooseMeters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="number"
                    android:hint="@string/in_meters_message"
                    android:inputType="textAutoCorrect" />

                <TextView
                    android:id="@+id/metersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/meters_message"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editTimeMarginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeMarginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/choose_time_margin_message"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/minutesViewLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/chooseMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="number"
                    android:hint="@string/in_minutes_message"
                    android:inputType="textAutoCorrect" />

                <TextView
                    android:id="@+id/minutesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minutes_message"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/saveMarginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:background="@drawable/unimportant_button"
            android:onClick="updateMargins"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/update"
            android:textColor="@color/lovelyWhite"
            android:textSize="24sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>