<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMeetingActivity">

    <ScrollView
        android:id="@+id/meetingDisplayScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/meetingDisplayScrollLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/meetingDisplayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:text="@string/meetingDisplayMessage"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/meetingInformationLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/displayMeetingDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextBox"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/displayMeetingTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextBox"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/displayMeetingLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextBox"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/mapDisplayLinLayout"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">

                    <fragment
                        android:id="@+id/mapDisplay"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        tools:context=".MapsActivity" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/meetingPasswordLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/requestPasswordLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enterPassword"
                        android:textColor="@color/colorPrimary"
                        android:textSize="22sp" />

                    <EditText
                        android:id="@+id/enterMeetingPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:ems="10"
                        android:hint="@string/enterMeetingPasswordHint"
                        android:inputType="textPassword" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/meetingPageSignInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/unimportant_button_selector"
                android:onClick="verifyMeetingAttendance"
                android:text="@string/signInToMeetingMessage"
                android:textSize="24sp"
                android:textColor="@color/lovelyWhite"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>